--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,3 @@
-
 header {
   display : flex;
   justify-content: space-between;
@@ -10,30 +9,31 @@ header img{
 	overflow : hidden;
 }
 
-header.a{
+header.a {
 	width : 80px;
 	overflow : hidden;
 }
-
 
 header ul {
   display :block;
 }
 header ul li {
   display : inline-block;
+  
 }
 
 header ul li a {
   display : inline-block;
-  width : 80px;
-  height : 30px;
-  line-height : 30px;
+/*	width : 80px; */
+  height : 30px; 
+  line-height : 30px; 
   color : red;
   text-decoration : none;
   margin : 10px 10px;
   border-radius : 10px;
   background : lightgrey;
   text-align : center;
+  padding : 5px 10px;
 }
 
 h1 {
@@ -60,7 +60,7 @@ input {
     padding : 5px 10px;
 }
 
-input[type="text"], input[type="password"]  {
+input[type="text"], input[type="password"] {
     width : 150px;
     height : 50px;
     background : lightgreen;
@@ -70,11 +70,26 @@ input[type="text"], input[type="password"]  {
 
 }
 
+ input[type="file"] {
+ 	display : block;
+ 	margin : 20px auto;
+ }
+
 input[type="submit"] {
     width : 100px;
     margin : 20px auto;
     border-radius : 5px;
     border : 2px solid grey;
     text-align : center;
+}
+
+label {
+	display : block;
+}
+
+textarea {
+	background : lightgreen;
+	border-radius : 10px;
+	border : 2px solid grey;
 }
 
