--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,7 +60,7 @@ input {
     padding : 5px 10px;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="number"] {
     width : 150px;
     height : 50px;
     background : lightgreen;
